data/derived/fa15/progs/unify/prog2784.ml.out
Characters 61-74:
  else [n mod 10] @ digitsOfInt n/10;;
                    ^^^^^^^^^^^^^
Error: This expression has type 'a list
       but an expression was expected of type int
